--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,22 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Firebase debug logs
+firebase-debug.log
+firebase-debug.*.log
+
+# Optional: OS and editor files
+.DS_Store
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
