--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.1",
     "firebase": "^12.1.0",
     "gsap": "^3.13.0",
@@ -21,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.1",
     "react-router-dom": "^7.8.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
