more ui updates

--- a/.gitignore
+++ b/.gitignore
@@ -42,15 +42,5 @@ firebase-debug.*.log
 *.swo
 *~
 
-# Documentation files (local only)
-COMPONENT_SHOWCASE.md
-DEPLOYMENT_CHECKLIST.md
-EDIT_BUTTON_FIX.md
-EDIT_FIX_SUMMARY.md
-IMAGE_MANAGEMENT_GUIDE.md
-INTEGRATION_EXAMPLE.md
-MODERN_UI_SUMMARY.md
-MYPROJECTINFO_IMPROVEMENTS.md
-VISUAL_IMPROVEMENTS.md
-FINAL_SUMMARY.md
-DESIGN_SYSTEM.md
+# Markdown files
+*.md
